Bug 1045824 - Ensure the TabChild is sized even if the parent frameloader is created after the reflow is done. r=smaug